--- a/src/main.css
+++ b/src/main.css
@@ -4,7 +4,7 @@
   @import 'tailwindcss/preflight.css' layer(base);
 }
 @import 'tailwindcss/theme.css' layer(theme);
-@import 'tailwindcss/utilities.css' layer(utilities);
+@import 'tailwindcss/utilities.css';
 
 @theme {
   --font-alright: 'Alright', 'sans-serif';
